# crypto-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mingw-w64.toolchain.cmake
include/: app_config.hpp  decrypt.hpp  delete_original_file.hpp  encrypt.hpp  get_input_bytes.hpp  handle_args.hpp  save_file.hpp
scripts/: build-linux-static.sh  build-linux.sh  build-win.sh  build.sh
src/: app_config.cpp  main.cpp
src/handlers/: handle_args.cpp
src/utils/: decrypt.cpp  deleteOriginalFile.cpp  encrypt.cpp  getInputBytes.cpp  saveFile.cpp
